[FEAT] add active subscription in client subscriptions
